# contacts

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en/: cosmic_ext_contacts.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs  utils.rs
src/backend/: duckdb.rs  mod.rs
src/backend/dbus/: contacts_daemon.rs  mod.rs
