[package]
name = "cosmic-ext-contacts"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A contact management application for the COSMIC™ Desktop"
repository = "https://github.com/TitouanReal/contacts"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
duckdb = { version = "1.1", features = ["bundled"] }
futures-util = "0.3"
i18n-embed-fl = "0.9"
ical = "0.11"
open = "5.3"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zbus = "5.3"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "about",
    "dbus-config",
    "single-instance",
    "tokio",
    "winit",
    "wayland",
    "wgpu",
]
